--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
     "@tanstack/react-query": "^5.52.0",
-    "expo": "~51.0.28",
+    "axios": "^1.7.5",
+    "expo": "~51.0.31",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linear-gradient": "^13.0.2",
@@ -36,10 +37,12 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-heroicons": "^4.0.0",
     "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-snap-carousel": "^1.3.1",
+    "react-native-snap-carousel": "^1.6.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
